// Copyright 2021 Datafuse Labs
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//     http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

syntax = "proto3";

package databend_proto;

message TagMeta {
  uint64 ver = 100;
  uint64 min_reader_ver = 101;

  // Ordered list of string values that may be set on this tag.
  // Matches CREATE TAG ... ALLOWED_VALUES semantics: must be declared before
  // other parameters, accepts up to 5,000 entries, and when omitted any string
  // (including empty) is accepted. Propagating tags use the order to resolve
  // conflicts, mirroring Snowflake behavior.
  repeated string allowed_values = 1;
  string comment = 2;
  string created_on = 3;
  optional string updated_on = 4;
}

message TagRefValue {
  uint64 ver = 100;
  uint64 min_reader_ver = 101;

  // Identifier of the referenced tag definition.
  uint64 tag_id = 1;
  // Payload assigned when the tag is set on an object. If the tag defined
  // `allowed_values`, this must match one of those entries; otherwise any string
  // (including empty) is permitted.
  string value = 2;
  string created_on = 3;
}
